fix scroll overflow

--- a/apps/shelter-client/src/styles/ActivityLogs.scss
+++ b/apps/shelter-client/src/styles/ActivityLogs.scss
@@ -1,3 +1,8 @@
+.activity-logs-wraper {
+    overflow-y: scroll;
+    height: 30vh;
+}
+
 .activity-logs-block {
     display: flex;
 
